Fix bug 1555924: Improve layout on mobile (#1320)
Do not break metadata content and main header into new line on mobile.

Also:
* Align Metadata CSS with Translate.Current
* Remove unused clearfix element
* Fix Helpers panel height
* More consistent styling with sibling elements

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,7 @@
     border-bottom: 1px solid #333941;
     grid-column-start: 1;
     grid-column-end: 3;
+    min-width: 700px;
 }
 
 #app > header .user-controls {
